# fastapi-blueprint

./: .env.example  Dockerfile  Dockerfile-no-pg  Makefile  NOTE.md  README.md  docker-compose.yaml  pyproject.toml  ruff.toml  todo.md
.github/workflows/: ci.yaml  openapi-spec.yaml  pre-commit.yaml
experiments/: row_level_locking_context_manager.py  row_level_locking_hero.py  row_level_locking_ticket_booking.py  showcase_row_level_locking.py
notes/: rollback-when-using-pytest.md  todo.md
scripts/: generate_openapi.py
src/: alembic.ini  config.py  database.py  docker_compose_cli.py  excepts.py  main.py  migration_cli.py  models.py  schemas.py  state.py
src/alembic/: env.py
src/alembic/versions/: 2025_12_16_1334-b1b12308dd01_init.py  2025_12_17_1007-7b56ff295e99_init.py  2025_12_18_1212-438f1c13aa3b_init.py
src/api/: deps.py  exception_handlers.py  router.py
src/api/endpoints/: health.py  heroes.py  users.py
src/middlewares/: logging.py
src/utils/: log.py
src/utils/cli/: docker_compose.py  migration.py
tests/: conftest.py  test_schemas.py
tests/api/endpoints/: test_heroes.py  test_users.py
