[project]
name = "fastapi-blueprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "uvicorn==0.38.0",
    "pydantic-settings==2.12.0",
    "sqlmodel~=0.0.27",
    "alembic>=1.17.2,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "pre-commit~=4.2.0",
    "fire>=0.7.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests"
]

[tool.uv]
package = true

[project.scripts]
migrate-db = "migration_cli:main"
